--- a/find_audiofiles/example/pubspec.yaml
+++ b/find_audiofiles/example/pubspec.yaml
@@ -29,8 +29,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  ffi: ^2.0.0
   flutter:
     sdk: flutter
+  path:
+  path_provider:
+
+  test_data:
+    path: ../../test_data
 
   find_audiofiles:
     # When depending on this package from a real application you should use:
@@ -46,6 +52,8 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
