--- a/find_audiofiles/ffigen.yaml
+++ b/find_audiofiles/ffigen.yaml
@@ -4,7 +4,9 @@ description: |
   Bindings for `src/find_audiofiles.h`.
 
   Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
-output: 'lib/find_audiofiles_bindings_generated.dart'
+output: 'lib/src/find_audiofiles_bindings_generated.dart'
+compiler-opts:
+  - '-I ../shared/find-audiofiles/include'
 headers:
   entry-points:
     - 'src/find_audiofiles.h'
