--- a/find_audiofiles/pubspec.yaml
+++ b/find_audiofiles/pubspec.yaml
@@ -8,12 +8,13 @@ environment:
   flutter: ">=2.11.0"
 
 dependencies:
+  async: ^2.9.0
+  ffi: ^2.0.0
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
-  ffi: ^2.0.0
   ffigen: ^6.0.1
   flutter_test:
     sdk: flutter
