Use the plugin in the main app

--- a/audiolist/pubspec.yaml
+++ b/audiolist/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   file_picker:
+  find_audiofiles:
+    path: ../find_audiofiles
 
 
   # The following adds the Cupertino Icons font to your application.
