--- a/audiolist/android/app/build.gradle
+++ b/audiolist/android/app/build.gradle
@@ -27,7 +27,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 33
-    ndkVersion flutter.ndkVersion
+    ndkVersion '23.1.7779620'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
