Add a variant that reports files via a callback mechanism
To test that this is possible without dealbreakers. In Hörbär, such a mechanism
would be easier to build than one using iterators.

--- a/find_audiofiles/src/CMakeLists.txt
+++ b/find_audiofiles/src/CMakeLists.txt
@@ -16,7 +16,7 @@ add_subdirectory(
   "${CMAKE_CURRENT_BINARY_DIR}/shared")
 
 add_library(find_audiofiles SHARED
-  "find_audiofiles.c"
+  "find_audiofiles.cpp"
 )
 
 target_link_libraries(find_audiofiles findaudiofiles)
