--- a/shared/CMakeLists.txt
+++ b/shared/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 3.10.2...3.15)
 
 project(native_libraries)
 
+add_subdirectory(thirdparty)
+
 add_subdirectory("find-audiofiles")
